--- a/views/create.hbs
+++ b/views/create.hbs
@@ -117,7 +117,7 @@
 
     $(document).on('click', '#saveQuestion', function() {
         var i = "";
-        $('.answer input').each(function() {
+        $('#questionModal .answer input').each(function() {
             i += '<li class="list-group-item">'+ $(this).val() +'</li>';
         });
         $('#questionBox').append(`
@@ -174,12 +174,12 @@
                         </div>
                         <div class="modal-body">
                         <form>
-                            <div class="form-group" id="question">
+                            <div class="form-group" id="questionEdit">
                                 <input type="text" class="form-control questionTitle" placeholder="Fråga?" value="`+ titleQuestion +`">
                             </div>
 
                             <div class="form-group">
-                                <select class="form-control" id="typeSelect">
+                                <select class="form-control" id="typeSelectEdit">
                                     <option hidden>Välj Typ</option>
                                     <option value="fler" id="qTypeMulti">Flervalsfråga</option>
                                     <option value="alternativ" id="qTypeAlt">Alternativfråga</option>
@@ -194,7 +194,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default pull-left" id="addButton">Lägg till Svar</button>
-                        <button type="button" class="btn btn-default" id="saveEditButton">Spara</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal" id="saveEditButton">Spara</button>
                     </div>
                 </div>
             </div>
@@ -214,23 +214,23 @@
         }
 
         if(title.substring(n).search("Flervalsfråga") > -1){
-            $('#typeSelect option[value=fler]').attr('selected','selected');
+            $('#typeSelectEdit option[value=fler]').attr('selected','selected');
         } else if (title.substring(n).search("Alternativfråga") > -1){
-            $('#typeSelect option[value=alternativ]').attr('selected','selected');
+            $('#typeSelectEdit option[value=alternativ]').attr('selected','selected');
         } else if (title.substring(n).search("Rangordningsfråga") > -1){
-            $('#typeSelect option[value=rang]').attr('selected','selected');
+            $('#typeSelectEdit option[value=rang]').attr('selected','selected');
         } else if (title.substring(n).search("Öppen fråga") > -1){
-            $('#typeSelect option[value=oppen]').attr('selected','selected');
+            $('#typeSelectEdit option[value=oppen]').attr('selected','selected');
         }
     });
     $('#editModal').on('click', '#saveEditButton', function () {
         var i = "";
-        $('.answer input').each(function() {
+        $('#editModal .answer input').each(function() {
             i += '<li class="list-group-item">'+ $(this).val() +'</li>';
         });
         thisPanel.html(`
             <div class="panel-heading clearfix">
-                <meta class="` + $('#typeSelect').val() + `">
+                <meta class="` + $('#typeSelectEdit').val() + `">
 
                 <div class="pull-right">
                     <button type="button" class="btn btn-default btn-sm btn-edit" data-toggle="modal" data-target="#editModal">Redigera</button>
@@ -238,7 +238,7 @@
                         &nbsp;<span class="glyphicon glyphicon-remove"></span>&nbsp;
                     </button>
                 </div>
-                <h3 class="panel-title">`+ $("#question").find('input').val() +' ('+ $('#typeSelect').val() +')'+`</h3>
+                <h3 class="panel-title">`+ $("#questionEdit").find('input').val() +' ('+ $('#typeSelectEdit :selected').text() +')'+`</h3>
             </div>
             <div class="panel-body">
                 <ul class="list-group">`+ i +`</ul>
