--- a/views/share.hbs
+++ b/views/share.hbs
@@ -1,12 +1,15 @@
+<!-- Page for sharing tests with groups or specific students -->
+
 <div class="container" id="shareTest">
     <div class="col-md-4 col-md-offset-4">
-        <!-- Select test -->
+
+        <!-- Test selection -->
         <h3 class="page-header">Välj test att dela</h3>
         <form action="share" method="post">
             <select name="share" id="shareTestSelect" class="form-control"></select>
             <br>
 
-            <!-- Select group/student -->
+            <!-- Group/student selection -->
             <select name="share" id="shareSelect" class="form-control">
                 <option value="">Dela till grupp/elev</option>
                 <option value="group" id="group">Dela till grupp</option>
@@ -16,8 +19,8 @@
     </div>
 </div>
 
-<!-- Select group -->
-<div class="container" id="shareGroupContainer">
+<!-- Group selection -->
+<div class="container collapse" id="shareGroupContainer">
     <div class="col-md-4 col-md-offset-4">
         <h3 class="page-header">Välj grupp</h3>
         <form action="share" method="post">
@@ -28,8 +31,8 @@
     </div>
 </div>
 
-<!-- Select student -->
-<div class="container" id="shareStudentContainer">
+<!-- Student selection -->
+<div class="container collapse" id="shareStudentContainer">
     <div class="col-md-4 col-md-offset-4">
         <h3 class="page-header">Välj elev</h3>
         <form action="share" method="post">
@@ -41,10 +44,7 @@
 </div>
 
 <script>
-
-    $("#shareGroupContainer").hide();
-    $("#shareStudentContainer").hide();
-
+    // Displays sub-selections when group/student selection is made
     $(function() {
         $("#shareSelect").change(function() {
             if ($("#group").is(":selected")) {
