--- a/views/create.hbs
+++ b/views/create.hbs
@@ -22,7 +22,7 @@
                     </div>
 
                     <!-- Datepicker -->
-                    <div class="form-group">
+                    <div class="form-group col-lg-6">
                         <label class="control-label" for="date">Startdatum:</label>
                         <div class="input-group">
                             <span class="input-group-addon">
@@ -31,9 +31,18 @@
                             <input class="form-control" id="dateStart" placeholder="YYYY-MM-DD" type="text"/>
                         </div>
                     </div>
+                    <div class="form-group col-lg-6">
+                        <label class="control-label" for="date">Starttid:</label>
+                        <div class="input-group">
+                            <span class="input-group-addon">
+                                <span class="glyphicon glyphicon-time"></span>
+                            </span>
+                            <input class="form-control" placeholder="HH:MM" type="text"/>
+                        </div>
+                    </div>
 
                     <!-- Datepicker -->
-                    <div class="form-group">
+                    <div class="form-group col-lg-6">
                         <label class="control-label" for="date">Slutdatum:</label>
                         <div class="input-group">
                             <span class="input-group-addon">
@@ -42,7 +51,15 @@
                             <input class="form-control" id="date" placeholder="YYYY-MM-DD" type="text"/>
                         </div>
                     </div>
-
+                    <div class="form-group col-lg-6">
+                        <label class="control-label" for="date">Sluttid:</label>
+                        <div class="input-group">
+                            <span class="input-group-addon">
+                                <span class="glyphicon glyphicon-time"></span>
+                            </span>
+                            <input class="form-control" placeholder="HH:MM" type="text"/>
+                        </div>
+                    </div>
 
                     <!-- Checkbox -->
                     <div class="checkbox">
