--- a/views/create.hbs
+++ b/views/create.hbs
@@ -22,7 +22,7 @@
                     </div>
 
                     <!-- Datepicker -->
-                    <div class="row form-group">
+                    <div class="row">
                         <div class="col-lg-6">
                             <label class="control-label" for="date">Startdatum:</label>
                             <div class="input-group">
@@ -44,7 +44,7 @@
                     </div>
 
                     <!-- Datepicker -->
-                    <div class="row form-group">
+                    <div class="row">
                         <div class="col-lg-6">
                             <label class="control-label" for="date">Slutdatum:</label>
                             <div class="input-group">
