--- a/views/create.hbs
+++ b/views/create.hbs
@@ -164,7 +164,7 @@
         $('#questionBox').append(`
         <div class="panel panel-default">
             <div class="panel-heading clearfix">
-                <meta class="` + $('#typeSelect').val() + `">
+                <meta class="` + $('#typeSelect :selected').text() + `">
 
                 <div class="pull-right">
                     <button type="button" class="btn btn-default btn-sm btn-edit" data-toggle="modal" data-target="#editModal">Redigera</button>
