--- a/views/group.hbs
+++ b/views/group.hbs
@@ -3,7 +3,7 @@
 
         <div class="panel panel-default notthis">
             <div class="panel-heading">
-                <h1 class="panel-title">Skapa grupp!</h1>
+                <h1 class="panel-title">Skapa grupp</h1>
             </div>
             <div class="panel-body">
                 <form>
