--- a/views/partials/_studentIndex.hbs
+++ b/views/partials/_studentIndex.hbs
@@ -8,7 +8,7 @@
             <h1>Testverktyg!</h1>
         {{/if}}
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pretium nisl tincidunt congue pulvinar. Maecenas leo orci, sodales vel convallis in, suscipit eu risus. Quisque non egestas magna. Phasellus euismod augue sed neque auctor rhoncus.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Skapa Test »</a></p>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Resultat »</a></p>
     </div>
 </div>
 
