Redigera-sida tillagd
/edit

--- a/views/partials/_adminNavbar.hbs
+++ b/views/partials/_adminNavbar.hbs
@@ -15,7 +15,7 @@
         <div class="collapse navbar-collapse" id="navbar-collapse">
             <ul class="nav navbar-nav">
                 <li><a href="/create">Skapa</a></li>
-                <li><a href="#">Redigera</a></li>
+                <li><a href="/edit">Redigera</a></li>
                 <li><a href="/statistics">Statistik</a></li>
                 <li><a href="/share">Dela</a></li>
                 <li><a href="/register">Registrera</a></li>
