--- a/views/create.hbs
+++ b/views/create.hbs
@@ -178,7 +178,7 @@
                         &nbsp;<span class="glyphicon glyphicon-remove"></span>&nbsp;
                     </button>
                 </div>
-                <h3 class="panel-title">`+ $("#question").find('input').val() +' ('+ $('#typeSelect').val() +')'+`</h3>
+                <h3 class="panel-title" style="margin-top: 5px">`+ $("#question").find('input').val() +' ('+ $('#typeSelect').val() +')'+`<span style="margin-right: 15px" class="pull-right">Poäng: `+ $('#points').val() +`</span></h3>
             </div>
             <div class="panel-body">
                 <ul class="list-group">`+ i +`</ul>
@@ -203,6 +203,7 @@
         var n = title.indexOf("(");
         var titleQuestion = title.substring(0, n).trim(); // variabel för fråga
         var titleType = title.substring(n); // variabel för typ av fråga
+        var points = title.substring(title.indexOf('Poäng: ') + 7, title.indexOf('</span>'));
 
         var answers = $(this).parent().parent().parent().find('.panel-body').find('ul li');
         var answerlist = new Array(); // Array för svaren
@@ -225,14 +226,19 @@
                                 <input type="text" class="form-control questionTitle" placeholder="Fråga?" value="`+ titleQuestion +`">
                             </div>
 
-                            <div class="form-group">
-                                <select class="form-control" id="typeSelectEdit">
-                                    <option hidden>Välj Typ</option>
-                                    <option value="fler" id="qTypeMulti">Flervalsfråga</option>
-                                    <option value="alternativ" id="qTypeAlt">Alternativfråga</option>
-                                    <option value="rang" id="qTypeOrder">Rangordningsfråga</option>
-                                    <option value="oppen" id="qTypeOpen">Öppen fråga</option>
-                                </select>
+                            <div class="row form-group">
+                                <div class="col-lg-6">
+                                    <select class="form-control" id="typeSelectEdit">
+                                        <option hidden>Välj Typ</option>
+                                        <option value="fler" id="qTypeMulti">Flervalsfråga</option>
+                                        <option value="alternativ" id="qTypeAlt">Alternativfråga</option>
+                                        <option value="rang" id="qTypeOrder">Rangordningsfråga</option>
+                                        <option value="oppen" id="qTypeOpen">Öppen fråga</option>
+                                    </select>
+                                </div>
+                                <div class="col-lg-6">
+                                    <input type="text" class="form-control" placeholder="Poäng" id="points" value="`+ points +`">
+                                </div>
                             </div>
                             <div id="answersBox">
                             </div>
@@ -332,7 +338,7 @@
                         </select>
                     </div>
                     <div class="col-lg-6">
-                        <input type="text" class="form-control" placeholder="Poäng">
+                        <input type="text" class="form-control" placeholder="Poäng" id="points">
                     </div>
                 </div>
 
