--- a/views/create.hbs
+++ b/views/create.hbs
@@ -204,7 +204,7 @@
         var titleQuestion = title.substring(0, n).trim(); // variabel för fråga
         var titleType = title.substring(n); // variabel för typ av fråga
         var points = title.substring(title.indexOf('Poäng: ') + 7, title.indexOf('</span>'));
-
+        console.log(points);
         var answers = $(this).parent().parent().parent().find('.panel-body').find('ul li');
         var answerlist = new Array(); // Array för svaren
         answers.each(function (i) {
@@ -237,7 +237,7 @@
                                     </select>
                                 </div>
                                 <div class="col-lg-6">
-                                    <input type="text" class="form-control" placeholder="Poäng" id="points" value="`+ points +`">
+                                    <input type="text" class="form-control" placeholder="Poäng" id="testpoints" value="`+ points +`">
                                 </div>
                             </div>
                             <div id="answersBox">
@@ -291,7 +291,7 @@
                         &nbsp;<span class="glyphicon glyphicon-remove"></span>&nbsp;
                     </button>
                 </div>
-                <h3 class="panel-title">`+ $("#questionEdit").find('input').val() +' ('+ $('#typeSelectEdit :selected').text() +')'+`</h3>
+                <h3 class="panel-title" style="margin-top: 5px">`+ $("#questionEdit").find('input').val() +' ('+ $('#typeSelectEdit :selected').text() +')'+`<span style="margin-right: 15px" class="pull-right">Poäng: `+ $('#testpoints').val() +`</span></h3>
             </div>
             <div class="panel-body">
                 <ul class="list-group">`+ i +`</ul>
