--- a/views/create.hbs
+++ b/views/create.hbs
@@ -237,7 +237,7 @@
                                     </select>
                                 </div>
                                 <div class="col-lg-6">
-                                    <input type="text" class="form-control" placeholder="Poäng" id="testpoints" value="`+ points +`">
+                                    <input type="text" class="form-control" placeholder="Poäng" id="questionpoint" value="`+ points +`">
                                 </div>
                             </div>
                             <div id="answersBox">
@@ -291,7 +291,7 @@
                         &nbsp;<span class="glyphicon glyphicon-remove"></span>&nbsp;
                     </button>
                 </div>
-                <h3 class="panel-title" style="margin-top: 5px">`+ $("#questionEdit").find('input').val() +' ('+ $('#typeSelectEdit :selected').text() +')'+`<span style="margin-right: 15px" class="pull-right">Poäng: `+ $('#testpoints').val() +`</span></h3>
+                <h3 class="panel-title" style="margin-top: 5px">`+ $("#questionEdit").find('input').val() +' ('+ $('#typeSelectEdit :selected').text() +')'+`<span style="margin-right: 15px" class="pull-right">Poäng: `+ $('#questionpoint').val() +`</span></h3>
             </div>
             <div class="panel-body">
                 <ul class="list-group">`+ i +`</ul>
