--- a/views/create.hbs
+++ b/views/create.hbs
@@ -18,7 +18,7 @@
                         <span class="input-group-addon">
                             <input type="checkbox" id="timed">
                         </span>
-                        <input type="text" class="form-control" placeholder="HH:MM" id="time">
+                        <input type="text" class="form-control" placeholder="Minuter" id="time">
                     </div>
 
                     <!-- Datepicker -->
