--- a/views/create.hbs
+++ b/views/create.hbs
@@ -29,7 +29,7 @@
                             <span class="input-group-addon">
                                 <span class="glyphicon glyphicon-calendar"></span>
                             </span>
-                                <input class="form-control" id="date" placeholder="YYYY-MM-DD" type="text"/>
+                                <input class="form-control" id="dateStart" placeholder="YYYY-MM-DD" type="text"/>
                             </div>
                         </div>
                         <div class="col-lg-6">
