Hämta gruppnamn till dela

--- a/views/share.hbs
+++ b/views/share.hbs
@@ -58,5 +58,11 @@
                 $("#shareStudentContainer").hide();
             }
         });
+
+        $('#shareGroupSelect').append(`
+            {{#studentGroups}}
+                <option>{{groupName}}</option>
+            {{/studentGroups}}
+        `)
     });
 </script>
