--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,6 +1,6 @@
 <!-- Page for editing a test -->
 
-<div class="container">
+<div class="container">l
     <div class="col-md-4 col-md-offset-4">
 
         <!-- Test selection -->
@@ -12,7 +12,7 @@
                 {{/each}}
             </select>
             <br>
-            <button type="button" class="btn btn-info btn-block" id="editButton">Redigera test</button>
+            <button type="button" class="btn btn-primary btn-block" id="editButton">Redigera test</button>
         </form>
     </div>
 </div>
