Kan välja elever i share

--- a/views/share.hbs
+++ b/views/share.hbs
@@ -64,5 +64,11 @@
                 <option>{{groupName}}</option>
             {{/studentGroups}}
         `)
+
+        $('#shareStudentSelect').append(`
+            {{#students}}
+                <option>{{FirstName}}</option>
+            {{/students}}
+        `)
     });
 </script>
